// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: Placeholder should render a video placeholder 1`] = `
.emotion-10 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-6 {
  position: absolute;
  bottom: 0;
}

.emotion-11:hover .emotion-6,
.emotion-11:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <noscript
        class="emotion-0 emotion-1"
      />
    </div>
    <button
      class="Button-sc-34e3rb-0 kwlSXK emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="IconWrapper-sc-34e3rb-1 jGavfg"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="TimeDuration-sc-34e3rb-2 cZLyLe"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder with guidance 1`] = `
.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-2 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-8 {
  position: absolute;
  bottom: 0;
}

.emotion-13:hover .emotion-8,
.emotion-13:focus .emotion-8 {
  background-color: #B80000;
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-4 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-4 {
    background-color: transparent;
  }
}

.emotion-0 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <strong
        aria-hidden="true"
        class="guidance-message emotion-0 emotion-1"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="emotion-2 emotion-3"
      />
    </div>
    <button
      class="Button-sc-34e3rb-0 kwlSXK emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="IconWrapper-sc-34e3rb-1 jGavfg"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="TimeDuration-sc-34e3rb-2 cZLyLe"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-10 emotion-11"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder without duration 1`] = `
.emotion-10 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-6 {
  position: absolute;
  bottom: 0;
}

.emotion-11:hover .emotion-6,
.emotion-11:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <noscript
        class="emotion-0 emotion-1"
      />
    </div>
    <button
      class="Button-sc-34e3rb-0 kwlSXK emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        Play video, "Dog chases cat."
      </span>
      <div
        aria-hidden="true"
        class="IconWrapper-sc-34e3rb-1 bShuUP"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder 1`] = `
.emotion-10 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-6 {
  position: absolute;
  bottom: 0;
}

.emotion-11:hover .emotion-6,
.emotion-11:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <noscript
        class="emotion-0 emotion-1"
      />
    </div>
    <button
      class="Button-sc-34e3rb-0 kwlSXK emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        Play audio, "Dog barks at cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="IconWrapper-sc-34e3rb-1 jGavfg"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="TimeDuration-sc-34e3rb-2 cZLyLe"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder without duration 1`] = `
.emotion-10 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  position: absolute;
  bottom: 0;
  display: none;
}

.emotion-6 {
  position: absolute;
  bottom: 0;
}

.emotion-11:hover .emotion-6,
.emotion-11:focus .emotion-6 {
  background-color: #B80000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <noscript
        class="emotion-0 emotion-1"
      />
    </div>
    <button
      class="Button-sc-34e3rb-0 kwlSXK emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        Play audio, "Dog barks at cat."
      </span>
      <div
        aria-hidden="true"
        class="IconWrapper-sc-34e3rb-1 bShuUP"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
    </button>
    <img
      alt=""
      class="emotion-8 emotion-9"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Placeholder should render no-js styles when noJsClassName prop is used 1`] = `
.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  display: block;
  width: 100%;
  visibility: visible;
}

.emotion-0 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: default;
}

.emotion-4 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-4 {
    background-color: transparent;
  }
}

.no-js .emotion-4 {
  background-color: rgba(34,34,34,0.75);
}

@media screen and (-ms-high-contrast:active) {
  .no-js .emotion-4 {
    background-color: transparent;
  }
}

.no-js .emotion-4 .guidance-message {
  display: none;
}

.emotion-2 {
  position: absolute;
  bottom: 0;
}

.emotion-8 {
  position: absolute;
  bottom: 0;
}

.no-js .emotion-8 {
  display: none;
}

.emotion-13:hover .emotion-8,
.emotion-13:focus .emotion-8 {
  background-color: #B80000;
}

<div>
  <div
    class="emotion-12 emotion-13"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <strong
        aria-hidden="true"
        class="guidance-message emotion-0 emotion-1"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="emotion-2 emotion-3"
      />
    </div>
    <button
      class="Button-sc-34e3rb-0 kwlSXK emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="IconWrapper-sc-34e3rb-1 jGavfg"
      >
        <svg
          aria-hidden="true"
          class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="TimeDuration-sc-34e3rb-2 cZLyLe"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="emotion-10 emotion-11"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;
